# oddjob

./: Makefile.am  NEWS  README.md  autogen.maint  configure.ac  oddjob.spec
scripts/: Makefile.am  oddjobd.service.in
src/: Makefile.am  mkhomedir.c  oddjob-mkhomedir.conf.in  oddjob.conf.in  oddjob_dbus.c  oddjob_request.1.in  oddjob_request.c  oddjobd-mkhomedir.conf.5.in  oddjobd-mkhomedir.conf.in  oddjobd.c  oddjobd.conf.5.in  pam_oddjob_mkhomedir.8.in  pam_oddjob_mkhomedir.c  selinux.c
src/launch/: launch.c
src/lookup/: Makefile.am  README  ads.c  common.h  cyrus.c  cyrus.h  gssapi.c  gssapi.h  lookup.c  plain.c  plain.h  scrape.c  scrape.h
src/mount/: mounthomedir.c  pam_oddjob_mounthomedir.8.in  pam_oddjob_mounthomedir.c  userfstab
tests/: Makefile.am  test-oddjobd.conf.in  test-oddjobd.sh
tests/001/: expected_stdout
tests/017/: expected_stdout
tests/018/: args  description  pre.sh
